--- a/public/src/contact/grid/test.html
+++ b/public/src/contact/grid/test.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<title>Test Contact Datagrid</title>
+	
+	<!-- styles -->
+		<!-- Estilos de ui-grid -->
+	    <link rel="stylesheet" href="/components/angular-ui-grid/ui-grid.min.css">
+    <!-- /styles -->
+	
+	<!-- scripts -->
+		<!-- Librería de Angular -->
+		<script src="/components/angular/angular.min.js"></script>
+		<!-- Librería de ui-grid -->
+		<script src="/components/angular-ui-grid/ui-grid.min.js"></script>
+	<!-- /scripts -->
+	
+	<!-- app -->
+		<script src="/src/contact/grid/contactGrid.mod.js"></script>
+	<!-- app -->
 </head>
-<body>
+<body ng-app="wi.contact.grid">
+
+	<h1>Test wi.contact.grid</h1>
+	
+	<div class="row" ng-include="'/src/contact/grid/contactGrid.tpl.html'"></div>
+	
+
 
 </body>
 </html>
