Set Grid Basic Configuration
Configuración básica del Grid

--- a/public/src/contact/grid/contactGrid.tpl.html
+++ b/public/src/contact/grid/contactGrid.tpl.html
@@ -1,4 +1,3 @@
 	<div ng-controller="ContactGridCtrl">
-	<div id="grid1" ui-grid="{ data: myData }" class="grid"></div>
-	
+		<div id="grid1" ui-grid="gridOptions" class="grid" ui-grid-auto-resize ui-grid-resize-columns ui-grid-selection ui-grid-pagination></div>
 	</div>
