Add ngResource script Agregar script para ngResource

--- a/public/src/contact/grid/test.html
+++ b/public/src/contact/grid/test.html
@@ -10,9 +10,11 @@
     <!-- /styles -->
 	
 	<!-- scripts -->
-		<!-- Librería de Angular -->
+		<!-- Lib Angular -->
 		<script src="/components/angular/angular.min.js"></script>
-		<!-- Librería de ui-grid -->
+		<!-- Lib ngResource -->
+		<script src="/components/angular-resource/angular-resource.min.js"></script>
+		<!-- Lib ui-grid -->
 		<script src="/components/angular-ui-grid/ui-grid.min.js"></script>
 	<!-- /scripts -->
 	
