--- a/public/src/commons/navigation/mainNav.tpl.html
+++ b/public/src/commons/navigation/mainNav.tpl.html
@@ -6,13 +6,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#"><img class="wi-logo" src="/assets/img/logo-texto.png"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-left">
+          	<li><a href="#">Contacts</a></li>
+            <li><a href="#">Stuff</a></li>
+          </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
             <li><a href="#">Login</a></li>
           </ul>
         </div>
