Create search (filter) feature and Crear la búsqueda

--- a/public/src/contact/grid/test.html
+++ b/public/src/contact/grid/test.html
@@ -121,7 +121,7 @@
 		</style>
 	    <!-- /Estilos Template Dashboard -->
 	    
-	    <!--  Estilos hover row ui-grid -->
+	    <!--  Estilos custom ui-grid -->
 	    <style type="text/css">
 			.ui-grid-row {
 			  cursor: pointer;
@@ -130,6 +130,10 @@
 			.ui-grid-row:hover .ui-grid-cell {
 	    		background-color: #CCC !important;
 	  		}
+	  		
+			.wi-grid-bar {
+				margin-bottom: 5px;
+			}
 		</style>
     <!-- /styles -->
 	
