--- a/public/src/contact/grid/contactGrid.tpl.html
+++ b/public/src/contact/grid/contactGrid.tpl.html
@@ -2,7 +2,7 @@
 	
 		<!-- @todo: Relocate in commons -->
 		<!-- @todo: Relocate controller in commons too -->
-       	<div class="row" ng-controller="GridBarCtrl">
+       	<div class="row wi-grid-bar" ng-controller="GridBarCtrl">
        		<div class="col-md-6">
         		<button type="button" class="btn btn-default" ng-click="createClk()"><i class="fa fa-plus"></i> Create</button>
         		<button type="button" class="btn btn-default" ng-click="deleteClk()"><i class="fa fa-trash"></i> Delete</button>
@@ -10,7 +10,7 @@
        		<div class="col-md-6">	
          	<form class="form-inline pull-right">
          		<div class="form-group">
-         			<input type="text" class="form-control" placeholder="Search" ng-model="searchString">
+         			<input type="text" class="form-control" placeholder="Search" ng-model="searchString" ng-keypress="searchKey($event)">
          			<button type="button" class="btn btn-default" ng-click="searchClk()"><i class="fa fa-search"></i> Search</button>
          		</div>
          	</form>          		
