--- a/public/src/bar/grid/test.html
+++ b/public/src/bar/grid/test.html
@@ -39,7 +39,7 @@
 	<!-- app -->
 		<!-- grid bar module -->
 		<script src="/src/bar/grid/gridBar.mod.js"></script>
-		<!-- grid bar controller module -->
+		<!-- grid bar directive -->
 		<script src="/src/bar/grid/gridBar.dir.js"></script>
 	<!-- app -->
 	
@@ -47,11 +47,11 @@
 		<script>
 			/*
 			 * Test Script.
-			 * Test wi.bar.grid module, who contains gridBar directive
+			 * Test wi.bar.grid module
 			 */
 			angular
 				.module('test.module', [
-	                // Inject Grid Bar module
+	                // Inject module to test
 				 	'wi.bar.grid'
 	            ]);
 	            
