Move navigation to layout folder.

--- a/public/src/nav/main/mainNav.tpl.html
+++ b/public/src/nav/main/mainNav.tpl.html
@@ -11,11 +11,11 @@
     	</div>
     	<div id="navbar" uib-collapse="navCollapsed" class="navbar-collapse collapse">
       		<ul class="nav navbar-nav navbar-left">
-      			<li><a href="#">Contacts</a></li>
-        		<li><a href="#">Stuff</a></li>
+      			<li><a href="#">Dashboard</a></li>
+        		<li><a href="#">Contacts</a></li>
       		</ul>
       		<ul class="nav navbar-nav navbar-right">
-        		<li><a href="#">Login</a></li>
+        		<li><a ui-sref="login">Login</a></li>
       		</ul>
     	</div>
   	</div>
